Create OpenAPI User and Admin
